@@ -6,12 +6,13 @@ import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.util.AntPathMatcher;
 import org.springframework.util.FileCopyUtils;
 import org.springframework.web.servlet.handler.HandlerInterceptorAdapter;
-import sun.misc.BASE64Decoder;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 /**
  *  Swagger 文档
@@ -52,7 +53,13 @@ public class SwaggerInterceptor extends HandlerInterceptorAdapter {
     public boolean httpBasicAuth(String authorization) throws IOException {
         if(check){
             if (authorization != null && authorization.split(" ").length == 2) {
-                String userAndPass = new String(new BASE64Decoder().decodeBuffer(authorization.split(" ")[1]));
+                String userAndPass;
+                try {
+                    byte[] decoded = Base64.getDecoder().decode(authorization.split(" ")[1]);
+                    userAndPass = new String(decoded, StandardCharsets.UTF_8);
+                } catch (IllegalArgumentException e) {
+                    return false;
+                }
                 String username = userAndPass.split(":").length == 2 ? userAndPass.split(":")[0] : null;
                 String password = userAndPass.split(":").length == 2 ? userAndPass.split(":")[1] : null;
                 return this.username.equals(username) && this.password.equals(password);
